--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body {
 
 main {
 	max-width: 50rem;
+	padding: 1rem 4rem;
 }
 
 ul {
@@ -46,7 +47,8 @@ img {
 
 h1 {
 	font-size: 4.1rem;
-	margin-bottom: 0;
+	margin-bottom: 2rem;
+	line-height: 1;
 }
 
 h2 {
